# prefect-minio-mongo-etl

./: .gitignore  Dockerfile  README.md  api.py  docker-compose.yml  s3_to_mongo.py
backend/: Dockerfile  api.py  config.py
backend/config/: MODIFICATION_REVIEW.md  configure-minio-webhook.sh  init.sh  local-pipeline-config.json  modification_plan.json  pipeline-config.json
backend/flows/: cars.csv  minio_to_minio.py  minio_to_mongo.py  s3_to_mongo.py
backend/flows/anomaly_detection/: Test.ipynb  anomaly_detection.py  anomaly_detection_model.joblib  collision_detection.py  collision_detection_model.joblib  data_preprocessing.py  heartbeat_detection.py  heartbeat_detection_model.joblib  run_model.py  slip_detection.py  spike_detection.py  spike_detection_model.joblib  waveform_classification_model.joblib  wheel_slip_detection_model.joblib
backend/flows/collector/: ab2pandas.py  azure_blob_to_csv_to_minio.py  collector.py  data_to_csvs.py  fatal_all_sites_between_2_and_3_days_ago.kql  from_prescan_to_mongo.py  run.sh  (+2 more)
backend/flows/command/logfisher_summarize/: ACPTable.txt  config.toml  pyproject.toml
backend/flows/command/logfisher_summarize/logfisher_summary_flow/: EmbeddedFaultTable.csv  __init__.py  config.py  logfisher_summary_flow.py  parse_logs.py
backend/flows/snapstat_fingerprints/: README.md  pyproject.toml
backend/flows/snapstat_fingerprints/snapstat/: __init__.py  actions.py  constants.py  fingerprints.py  snapstat_fingerprints_flow.py  snapstat_fingerprints_sliding_window.py
backend/helpers/: csv_to_bucket.py
config/: configure-minio-webhook.sh  init.sh  notify.json
data/: placeholder
flows/: minio_to_mongo.py
minio_data/.minio.sys/: format.json
(+39 files in other folders)
