[tool.poetry]
name = "snapstat"
version = "0.1.0"
description = "A Python package for analyzing log files using predefined fingerprint sequences."
authors = [ "Spenser",  "spenser.millburn@alertinnovation.com" ]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yourusername/log_analysis"
repository = "https://github.com/yourusername/log_analysis"
keywords = ["log analysis", "ETL", "MinIO", "MongoDB", "Prefect"]

# [tool.poetry.dependencies]
# python = "^3.6"
# prefect = "^2.20.8"
# minio = "^7.2.0"
# pymongo = "^3.13.0"
# pandas = "^1.3.3"

[tool.poetry.scripts]
snapstat_fingerprints = "snapstat.snapstat_fingerprints_flow:snapstat_fingerprints"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
