[tool.poetry]
name = "snapstat"
version = "1.0.0"
description = "A python project for analyzing logs"
authors = ["Spenser Millburn <spenser@example.com>"]
license = "MIT"
[tool.poetry.dependencies]
fastapi = "*"
typer = "*"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

